@@ -90,10 +90,6 @@ impl<T: Serialize + DeserializeOwned + 'static> FieldType for Json<T> {
 impl<T: Serialize + DeserializeOwned + 'static> AsDbType for Json<T> {
     type Primitive = Vec<u8>;
     type DbType = Binary;
-
-    fn from_primitive(primitive: Self::Primitive) -> Self {
-        Self(serde_json::from_slice(&primitive).unwrap()) // TODO propagate error?
-    }
 }
 
 new_converting_decoder!(
@@ -144,10 +140,6 @@ impl<T: Serialize + DeserializeOwned + 'static> FieldType for Option<Json<T>> {
 impl<T: Serialize + DeserializeOwned + 'static> AsDbType for Option<Json<T>> {
     type Primitive = Option<Vec<u8>>;
     type DbType = Binary;
-
-    fn from_primitive(primitive: Self::Primitive) -> Self {
-        primitive.map(Json::<T>::from_primitive)
-    }
 }
 
 // From
